k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartalk
  labels:
    name: smartalk
    environment: production
